--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -47,7 +47,7 @@
 - show_label    = t("admin.index.show_action")
 - delete_label  = t("admin.index.delete_action")
 - edit_label    = t("admin.index.edit_action")
-- history_label    = t("admin.breadcrumbs.for_object")
+- history_label    = t("admin.breadcrumbs.history_show")
 
 #list{:'data-pjax-container' => true}
   %script
