--- a/app/views/rails_admin/main/history.html.haml
+++ b/app/views/rails_admin/main/history.html.haml
@@ -3,7 +3,7 @@
 - filter = params[:filter]
 - sort = params[:sort]
 - sort_reverse = params[:sort_reverse]
-- path_method = params[:id] ? "history_object_path" : "history_model_path"
+- path_method = params[:id] ? "history_show_path" : "history_index_path"
 
 = form_tag("", :method => "get", :class => "search") do
   .row.clearfix
