--- a/app/views/rails_admin/main/bulk_delete.html.haml
+++ b/app/views/rails_admin/main/bulk_delete.html.haml
@@ -1,6 +1,6 @@
 %h4= I18n.t('admin.delete.bulk_delete')
 %ul= render :partial => "delete_notice", :collection => @objects
-= form_tag bulk_destroy_path(:model_name => @abstract_model.to_param, :bulk_ids => @objects.map(&:id)) do
+= form_tag bulk_delete_path(:model_name => @abstract_model.to_param, :bulk_ids => @objects.map(&:id)), :method => :delete do
   .actions
     %input{:type => :hidden, :name => 'return_to', :value => (params[:return_to].presence || request.referer)}
     %button.btn.danger{:type => "submit", :'data-disable-with' => t("admin.delete.confirmation")}= t("admin.delete.confirmation")
