--- a/app/views/rails_admin/main/delete.html.haml
+++ b/app/views/rails_admin/main/delete.html.haml
@@ -7,7 +7,7 @@
   = t("admin.delete.all_of_the_following_related_items_will_be_deleted")
 
 %ul= render :partial => "delete_notice", :object => @object
-= form_for(@object, :url => destroy_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => {:method => "delete"}) do
+= form_for(@object, :url => delete_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => {:method => "delete"}) do
   %input{:type => :hidden, :name => 'return_to', :value => (params[:return_to].presence || request.referer)}
   .actions
     %button.btn.danger{:type => "submit", :'data-disable-with' => t("admin.delete.confirmation")}= t("admin.delete.confirmation")
