--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.haml
@@ -29,7 +29,8 @@
 - if authorized? :new, config.abstract_model
   - path_hash = { :model_name => config.abstract_model.to_param, :modal => true }
   - path_hash.merge!({ :associations => { field.inverse_of => (form.object.id || 'new') } }) if field.inverse_of
-  = link_to t('admin.actions.create').capitalize + ' ' + config.abstract_model.pretty_name.downcase, '#', :data => { :link => new_path(path_hash) }, :class => "create btn", :style => 'margin-left:10px'
+  = link_to wording_for(:link, :action => :new, :model_config => config), '#', :data => { :link => new_path(path_hash) }, :class => "create btn", :style => 'margin-left:10px'  
+  
 = form.javascript_for(field) do
   :plain
     $("#{form.jquery_namespace(field)} select").filteringMultiselect({
