--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -25,10 +25,10 @@
 - if authorized? :new, config.abstract_model
   - path_hash = { :model_name => config.abstract_model.to_param, :modal => true }
   - path_hash.merge!({ :associations => { field.inverse_of => (form.object.id || 'new') } }) if field.inverse_of
-  = link_to t('admin.actions.create').capitalize + ' ' + config.abstract_model.pretty_name.downcase, '#', :data => { :link => new_path(path_hash) }, :class => "btn create", :style => 'float:left; margin-left:10px'
+  = link_to wording_for(:link, :action => :new, :model_config => config), '#', :data => { :link => new_path(path_hash) }, :class => "btn create", :style => 'float:left; margin-left:10px'
 
 - if edit_url.present?
-  = link_to t('admin.actions.update').capitalize + ' ' + config.abstract_model.pretty_name.downcase, '#', :data => { :link => edit_url }, :class => "btn update #{field.value.nil? && 'disabled'}", :style => 'float:left; margin-left:10px'
+  = link_to wording_for(:link, :action => :edit, :model_config => config), '#', :data => { :link => edit_url }, :class => "btn update #{field.value.nil? && 'disabled'}", :style => 'float:left; margin-left:10px'
 
 = form.javascript_for(field) do
   :plain
