--- a/app/views/rails_admin/main/_models_links.html.haml
+++ b/app/views/rails_admin/main/_models_links.html.haml
@@ -4,19 +4,19 @@
 - can_export = authorized? :export, abstract_model
 - can_create = authorized? :new, abstract_model
 - can_see_history = authorized? :history, abstract_model
-- if @model_config
-  %li{:class => (params[:action] == 'index' && 'active')}= link_to @model_config.label_plural, index_path(:model_name => model_name) if can_list
-%li{:class => (params[:action] == 'new' && 'active')}= link_to t("admin.index.add_new"), new_path(:model_name => model_name) if can_create
-%li{:class => (params[:action] == 'history_index' && 'active')}= link_to t("admin.history.name"), history_index_path(:model_name => model_name) if @auditing_adapter && can_see_history
-%li{:class => (params[:action] == 'export' && 'active')}= link_to t("admin.breadcrumbs.export").capitalize, export_path(model_name) if can_export
+
+%li{:class => (params[:action] == 'index' && 'active')}= link_to wording_for(:menu_item, :action => :index), index_path(:model_name => model_name) if can_list
+%li{:class => (params[:action] == 'new' && 'active')}= link_to wording_for(:menu_item, :action => :new), new_path(:model_name => model_name) if can_create
+%li{:class => (params[:action] == 'history_index' && 'active')}= link_to wording_for(:menu_item, :action => :history_index), history_index_path(:model_name => model_name) if @auditing_adapter && can_see_history
+%li{:class => (params[:action] == 'export' && 'active')}= link_to wording_for(:menu_item, :action => :export), export_path(model_name) if can_export
 
 - if params[:action] == 'index'
   - if (can_delete || can_export)
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
       %a.dropdown-toggle{:href => '#'}= t('admin.index.selected') + "..."
       %ul.dropdown-menu
-        %li= link_to_function t("admin.index.export_selected"), "jQuery('#bulk_action').val('export'); jQuery('#bulk_form').submit()" if can_export
-        %li= link_to_function t("admin.index.delete_selected"), "jQuery('#bulk_action').val('bulk_delete'); jQuery('#bulk_form').submit()" if can_delete
+        %li= link_to_function wording_for(:bulk_link, :action => :export), "jQuery('#bulk_action').val('export'); jQuery('#bulk_form').submit()" if can_export
+        %li= link_to_function wording_for(:bulk_link, :action => :bulk_delete), "jQuery('#bulk_action').val('bulk_delete'); jQuery('#bulk_form').submit()" if can_delete
   - if @filterable_fields.present?
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
       %a.dropdown-toggle{:href => '#'}= t('admin.index.add_filter') + "..."
