--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -30,11 +30,9 @@
             %a.close{:href => '#'}×
             %p= value
         = breadcrumb
-        - if @abstract_model
-          - if @object && !@object.new_record?
-            %ul.tabs= render :partial => 'rails_admin/main/object_links', :locals => { :add_active_class => true, :model_name => params[:model_name], :object => @object }
-          - else
-            %ul.tabs= render :partial => 'rails_admin/main/models_links', :locals => { :abstract_model => @abstract_model }
+        %ul.tabs
+          = menu_for @abstract_model ? (@object.try(:id) ? :object : :model) : :root
+          = content_for :contextual_tabs
         %span.row
         = yield
         %footer
