Full i18n keys cleanup

--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -20,7 +20,7 @@
     .container-fluid
       .sidebar
         .well
-          %h3= t "admin.dashboard.navigation"
+          %h3= t "admin.misc.navigation"
           = render :partial => 'layouts/rails_admin/navigation'
       .content
         .page-header
