--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -68,4 +68,4 @@
     %button.btn.info{:type => "submit", :name => 'xml'}
       = t("admin.export.confirmation", :name => 'xml')
     %button.btn{:type => "submit", :name => "_continue"}
-      = t("admin.new.cancel")
+      = t("admin.form.cancel")
