--- a/app/views/rails_admin/main/delete.html.haml
+++ b/app/views/rails_admin/main/delete.html.haml
@@ -1,14 +1,14 @@
 %h4
-  = t("admin.delete.are_you_sure_you_want_to_delete_the_object", :model_name => @abstract_model.pretty_name.downcase)
+  = t("admin.form.are_you_sure_you_want_to_delete_the_object", :model_name => @abstract_model.pretty_name.downcase)
   &ldquo;
   %strong>= @model_config.with(:object => @object).object_label
   \&rdquo;
   %span>
-  = t("admin.delete.all_of_the_following_related_items_will_be_deleted")
+  = t("admin.form.all_of_the_following_related_items_will_be_deleted")
 
 %ul= render :partial => "delete_notice", :object => @object
 = form_for(@object, :url => delete_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => {:method => "delete"}) do
   %input{:type => :hidden, :name => 'return_to', :value => (params[:return_to].presence || request.referer)}
   .actions
-    %button.btn.danger{:type => "submit", :'data-disable-with' => t("admin.delete.confirmation")}= t("admin.delete.confirmation")
-    %button.btn{:type => "submit", :name => "_continue", :'data-disable-with' => t("admin.new.cancel")}= t("admin.new.cancel")
+    %button.btn.danger{:type => "submit", :'data-disable-with' => t("admin.form.confirmation")}= t("admin.form.confirmation")
+    %button.btn{:type => "submit", :name => "_continue", :'data-disable-with' => t("admin.form.cancel")}= t("admin.form.cancel")
