--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -6,6 +6,9 @@
   sort_reverse = params[:sort_reverse]
   sort = params[:sort]
   params.delete(:sort) if params[:sort] == @model_config.list.sort_by.to_s
+  
+  export_action = RailsAdmin::Config::Actions.find(:export, { :controller => self.controller, :abstract_model => @abstract_model })
+  export_action = export_action && authorized?(export_action.authorization_key, @abstract_model) ? export_action : nil
 
   properties = @model_config.list.with(:view => self, :object => @abstract_model.model.new).visible_fields
   # columns paginate
@@ -43,17 +46,11 @@
   end.join if @ordered_filters
 
 
-- can_bulk_action = (authorized?(:export, @abstract_model) || authorized?(:delete, @abstract_model))
-- show_label    = t("admin.index.show_action")
-- delete_label  = t("admin.index.delete_action")
-- edit_label    = t("admin.index.edit_action")
-- history_label    = t("admin.breadcrumbs.history_show")
-
 = content_for :contextual_tabs do
   = bulk_menu
   - if @filterable_fields.present?
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
-      %a.dropdown-toggle{:href => '#'}= t('admin.index.add_filter') + "..."
+      %a.dropdown-toggle{:href => '#'}= t('admin.misc.add_filter')
       %ul.dropdown-menu#filters
         - @filterable_fields.each do |field|
           - field_options = case field.type
@@ -63,7 +60,6 @@
             - ''
           %li
             %a{:href => '#', "data-field-label" => field.label, "data-field-name" => field.name, "data-field-options" => field_options, "data-field-type" => field.type, "data-field-value" => ""}= field.label
-
 
 #list{:'data-pjax-container' => true}
   %script
@@ -80,10 +76,11 @@
         #filters_box
     .row.clearfix
       .span3
-        %input{:name => "query", :type => "search", :value => query, :placeholder => t("admin.index.search")}
+        %input{:name => "query", :type => "search", :value => query, :placeholder => t("admin.misc.filter")}
       .span3
-        %button.btn.primary{:type => "submit", :'data-disable-with' => t("admin.index.refresh")}= t("admin.index.refresh")
-      %span{:style => 'float:right'}=link_to t("admin.index.export_current_action"), export_path(params.except('set').except('page')), :class => 'btn info'
+        %button.btn.primary{:type => "submit", :'data-disable-with' => t("admin.misc.refresh")}= t("admin.misc.refresh")
+      - if export_action
+        %span{:style => 'float:right'}=link_to wording_for(:link, :action => export_action), export_path(params.except('set').except('page')), :class => 'btn info'
 
   = form_tag bulk_action_path(:model_name => @abstract_model.to_param), :method => :post, :id => "bulk_form", :class => "form" do
     = hidden_field_tag :bulk_action
@@ -91,8 +88,7 @@
       %thead
         %tr
           %th.first.shrink
-            - if can_bulk_action
-              %input.checkbox.toggle{:type => "checkbox"}
+            %input.checkbox.toggle{:type => "checkbox"}
           - if other_left
             %th.other.left.shrink= "..."
           - properties.each do |property|
@@ -108,8 +104,7 @@
         - @objects.each do |object|
           %tr
             %td.select.action
-              - if can_bulk_action
-                = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
+              = check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_ids_#{object.id}", :class => "checkbox"
             - if @other_left_link ||= other_left && index_path(params.except('set').merge(params[:set].to_i != 1 ? {:set => (params[:set].to_i - 1)} : {}))
               %td.other.left= link_to "...", @other_left_link, :class => 'pjax'
             - properties.map{ |property| property.bind(:object, object) }.each do |property|
@@ -122,7 +117,7 @@
     - unless params[:all]
       - total_count = @objects.total_count
       = paginate(@objects, :theme => 'twitter-bootstrap', :remote => true)
-      = link_to(t("admin.index.show_all"), index_path(params.merge(:all => true)), :class => "show-all btn clearfix pjax") unless total_count > 100 || total_count <= @objects.size
+      = link_to(t("admin.misc.show_all"), index_path(params.merge(:all => true)), :class => "show-all btn clearfix pjax") unless total_count > 100 || total_count <= @objects.size
       .clearfix.total-count= "#{total_count} #{@model_config.label_plural.downcase}"
     - else
       .clearfix.total-count= "#{@objects.size} #{@model_config.label_plural.downcase}"
