--- a/app/views/rails_admin/main/_form_enumeration.html.haml
+++ b/app/views/rails_admin/main/_form_enumeration.html.haml
@@ -1,4 +1,4 @@
-= form.select field.method_name, field.enum, {:include_blank => true}, field._html_attributes.reverse_merge({ :placeholder => t('admin.index.search') })
+= form.select field.method_name, field.enum, {:include_blank => true}, field._html_attributes.reverse_merge({ :placeholder => t('admin.misc.search') })
 = form.javascript_for(field) do
   :plain
     $("#{form.jquery_namespace(field)} select").filteringSelect({});
