--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -20,7 +20,7 @@
 
   collection = xhr ? [[selected_name, selected_id]] : controller.list_entries(config, :index, field.associated_collection_scope, false).map { |o| [o.send(config.object_label_method), o.id] }
 
-= form.select field.method_name, collection, { :selected => selected_id, :include_blank => true }, field._html_attributes.reverse_merge({:placeholder => t('admin.index.search')})
+= form.select field.method_name, collection, { :selected => selected_id, :include_blank => true }, field._html_attributes.reverse_merge({:placeholder => t('admin.misc.search')})
 
 - if authorized? :new, config.abstract_model
   - path_hash = { :model_name => config.abstract_model.to_param, :modal => true }
