--- a/app/views/layouts/rails_admin/_secondary_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_secondary_navigation.html.haml
@@ -3,8 +3,8 @@
 - if main_app_root_path = (main_app.root_path rescue false)
   %li= link_to t('home.name').capitalize, main_app_root_path
 - if _current_user
-  - if authorized?(:edit, _current_user.class, _current_user) && _current_user.respond_to?(:email)
-    %li= link_to _current_user.email, edit_path(_current_user.class.name.underscore.pluralize, _current_user)
+  - if user_link = edit_user_link
+    %li= user_link
   - if defined?(Devise) && (devise_scope = request.env["warden"].config[:default_scope] rescue false) && (logout_path = main_app.send("destroy_#{devise_scope}_session_path") rescue false)
     %li= link_to content_tag('span', t('admin.misc.log_out'), :class => 'label important'), logout_path, :method => Devise.sign_out_via
   - if _current_user.respond_to?(:email)
