--- a/app/views/rails_admin/main/_form_colorpicker.html.haml
+++ b/app/views/rails_admin/main/_form_colorpicker.html.haml
@@ -1,4 +1,5 @@
-= form.send field.view_helper, field.method_name, field._html_attributes.reverse_merge({:style => "background-color: #{field.color}"})
+- html_attributes = field.html_attributes.reverse_merge({:style => "background-color: #{field.color}"}).reverse_merge((hdv = field.html_default_value).nil? ? {} : { :value => hdv })
+= form.send field.view_helper, field.method_name, html_attributes
 
 = javascript_include_tag asset_path 'rails_admin/jquery.colorpicker.js'
 = stylesheet_link_tag asset_path 'rails_admin/jquery.colorpicker.css'
