Add hook for adding CSS and JavaScript to layout in custom actions

--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -7,6 +7,7 @@
     = csrf_meta_tag
     = stylesheet_link_tag "rails_admin/rails_admin.css"
     = javascript_include_tag "rails_admin/rails_admin.js"
+    = content_for :head
   %body.rails_admin{:style => "padding-top: 60px;"}
     .topbar-wrapper{:style => "z-index: 5;"}
       .topbar{:'data-dropdown' => 'dropdown'}
