--- a/app/views/rails_admin/main/history.html.haml
+++ b/app/views/rails_admin/main/history.html.haml
@@ -10,7 +10,7 @@
     .span3
       %input{:name => "query", :type => "search", :value => query, :placeholder => "#{t("admin.misc.filter")}"}
     .span3
-      %button.btn.primary{:type => "submit", :'data-disable-with' => t("admin.misc.refresh")}= t("admin.misc.refresh")
+      %button.btn.btn-primary{:type => "submit", :'data-disable-with' => t("admin.misc.refresh")}= t("admin.misc.refresh")
 %table#history.zebra-striped
   %thead
     %tr
