--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -7,33 +7,34 @@
     = csrf_meta_tag
     = stylesheet_link_tag "rails_admin/rails_admin.css"
     = javascript_include_tag "rails_admin/rails_admin.js"
-  %body.rails_admin{:style => "padding-top: 60px;"}
-    .topbar-wrapper{:style => "z-index: 5;"}
-      .topbar{:'data-dropdown' => 'dropdown'}
-        .topbar-inner
-          .container-fluid
-            %h3
-              = link_to dashboard_path do
-                = _get_plugin_name[0] || 'Rails'
-                %small= _get_plugin_name[1] || 'Admin'
-            %ul.nav.secondary-nav= render :partial => 'layouts/rails_admin/secondary_navigation'
+  %body.rails_admin
+    .navbar.navbar-fixed-top
+      .navbar-inner
+        .container-fluid
+          %a.brand{:href => dashboard_path}
+            = _get_plugin_name[0] || 'Rails'
+            %small= _get_plugin_name[1] || 'Admin'
+          .nav-collapse
+            = render :partial => 'layouts/rails_admin/secondary_navigation'
     .container-fluid
-      .sidebar
-        .well
-          %h3= t "admin.misc.navigation"
-          = render :partial => 'layouts/rails_admin/navigation'
-      .content
-        .page-header
-          %h1= @page_name
-        - flash && flash.each do |key, value|
-          .alert-message.fade.in{:class => key}
-            %a.close{:href => '#'}×
-            %p= value
-        = breadcrumb
-        %ul.tabs
-          = menu_for((@abstract_model ? (@object.try(:id) ? :member : :collection) : :root), @abstract_model, @object)
-          = content_for :contextual_tabs
-        %span.row
-        = yield
-        %footer
-          %p &copy; RailsAdmin 2011
+      .row-fluid
+        .span3
+          .well.sidebar-nav
+            %ul.nav.nav-list= main_navigation
+        .span9
+          .row-fluid
+            .content
+              .page-header
+                %h1= @page_name
+              - flash && flash.each do |key, value|
+                .alert{:class => "alert-#{key}"}
+                  %a.close{:href => '#', :'data-dismiss' => "alert"}×
+                  = value
+              = breadcrumb
+              %ul.nav.nav-tabs
+                = menu_for((@abstract_model ? (@object.try(:id) ? :member : :collection) : :root), @abstract_model, @object)
+                = content_for :contextual_tabs
+              %span.row
+              = yield
+              %footer
+                %p &copy; RailsAdmin 2011 - 201
