--- a/app/views/rails_admin/main/_form_file_upload.html.haml
+++ b/app/views/rails_admin/main/_form_file_upload.html.haml
@@ -5,7 +5,7 @@
     = value
   = form.file_field(field.name, field.html_attributes)
 - if field.optional? && field.errors.blank? && file && field.delete_method
-  %a.label.notice{:href => '#', :onclick => "jQuery(this).siblings('[type=checkbox]').click(); jQuery(this).siblings('.toggle').toggle(); jQuery(this).toggleClass('important notice'); return false"}
+  %a.label.label-info{:href => '#', :onclick => "jQuery(this).siblings('[type=checkbox]').click(); jQuery(this).siblings('.toggle').toggle(); jQuery(this).toggleClass('label-important label-info'); return false"}
     = I18n.t('admin.actions.delete.menu').capitalize + " #{field.method_name}"
   = form.check_box(field.delete_method, :style => 'display:none;' )
 - if field.cache_method
