--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -37,4 +37,4 @@
               %span.row
               = yield
               %footer
-                %p &copy; RailsAdmin 2011 - 201
+                %p &copy; RailsAdmin 2012
